# DebateRAG

./: .env.example  README.md  app.py  debateRag.py  debate_pipeline.py  main.py  pyproject.toml
blog/: post.md
web/: app.js  index.html  styles.css
